# VLM2Vec-for-Pyserini

./: README.md  eval.py  pyproject.toml  requirements.txt  train.py
adhoc/: merge_checkpoint.py  testset_stats.py
adhoc/data/: download_datasets.py  load_local_hfdataset.py
adhoc/eval_mteb/: run_mteb.py
experiments/examples/llava_next/: demo.py
experiments/examples/phi3_v/: demo.py
experiments/examples/qwen2vl/: demo_v1_image.py  demo_v1_video.py  demo_v2_image.py  demo_v2_video.py
src/data/eval_dataset/: vidore_dataset.py  visrag_dataset.py
src/model/: model.py  processor.py
src/model/baseline_backbone/colpali/: processing_paligemma.py
src/model/baseline_backbone/gme/: gme_inference.py
src/model/baseline_backbone/lamra/: lamra_inference.py  lamra_qwen25_inference.py
src/model/baseline_backbone/llava_next/: processing_llava_next.py
src/pyserini_integration/: aggregate_results.py  evaluate.py  evaluate_results.py  experiments.sh  mmeb_base_encoder.py  mmeb_corpus_encoder.py  mmeb_query_encoder.py  prepare_dataset.sh  quick_start_demo.py  save_pyserini_data.py  visdoc.yaml
